--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "linkedin-auto-poster.js",
   "scripts": {
+    "server": "babel-node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "puppeteer": "^1.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
